Changing stock to catalogue, and specifying doubles in calculations

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_below="@id/product"
-        android:id="@+id/stock_listview" />
+        android:id="@+id/catalogue_listview" />
 
 </RelativeLayout>
