--- a/app/src/main/res/layout/catalogue_list_item.xml
+++ b/app/src/main/res/layout/catalogue_list_item.xml
@@ -15,7 +15,7 @@
         android:layout_margin="10dp"
         android:text="Sell discount"
         android:layout_centerHorizontal="true"
-        android:id="@+id/product_sell_discount" />
+        android:id="@+id/product_discount" />
 
     <TextView
         android:layout_width="wrap_content"
